FIX: dialog overflow bug

--- a/frontend/stylesheets/dialog.scss
+++ b/frontend/stylesheets/dialog.scss
@@ -42,8 +42,11 @@
 
   .tao-dialog-content {
     padding: 1rem 2rem;
-    overflow-y: auto;
-    overscroll-behavior: contain;
+
+    &.scrollable {
+      overflow-y: auto;
+      overscroll-behavior: contain;
+    }
 
     h3:first-child,
     .title:first-child {
